syntax = "proto3";

option java_package = "ca.eandb.jmist.pipe.proto";
option java_outer_classname = "RenderEngineProtos";

import "jmist/proto/render.proto";

message Position {
  uint32 x = 1;
  uint32 y = 2;
}

message Rectangle {
  Position position = 1;
  Size size = 2;
}

message RenderRequest {
  RenderJob job = 1;

  message LocalOptions {
    uint32 threads = 1;
  }

  message RemoteOptions {
    string host = 1;
    string username = 2;
    string password = 3;
  }

  oneof options {
    LocalOptions local_options = 2;
    RemoteOptions remote_options = 3;
  }
}

message RenderCallback {
  bool done = 1;
  double progress = 2;
  string error = 3;

  message DrawTile {
    Rectangle tile = 2;

    enum PixelFormat {
      DOUBLE_RGBA = 0;
    }
    PixelFormat format = 3;

    bytes data = 4;
    uint64 offset = 5;
    uint64 length = 6;
  }
  DrawTile draw_tile = 4;
}
